Fix the header wrap

--- a/src/App.scss
+++ b/src/App.scss
@@ -58,4 +58,5 @@ body {
   max-width: 80rem;
   margin: 0 auto;
   width: 100%;
+  height: 100%;
 }
