--- a/src/components/header/_Header.scss
+++ b/src/components/header/_Header.scss
@@ -1,8 +1,6 @@
 .header {
-  width: 100%;
+height: 22.5vh;
   background-color: #eff2f6;
+width: 100%;
 }
 
-.header-container {
-  height: 22.5vh;
-}
